<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_desired_grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_desired_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/desired_grade" />

        <EditText
            android:id="@+id/et_desired_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAlternate"
            android:maxLength="2"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:hint="@string/character_letter_grade_here"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_min_avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_min_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/min_average_required" />

        <EditText
            android:id="@+id/et_min_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAlternate"
            android:inputType="numberDecimal"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:hint="@string/numeric_average_here"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_cur_avg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_cur_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/current_average_required" />

        <EditText
            android:id="@+id/et_cur_avg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAlternate"
            android:inputType="numberDecimal"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:hint="@string/numeric_average_here"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_final_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/tv_final_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:text="@string/final_percentage_weight" />

        <EditText
            android:id="@+id/et_final_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorAlternate"
            android:inputType="numberDecimal"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:hint="@string/final_weight_here"
            tools:ignore="TextFields" />
    </LinearLayout>

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_weight="1"
        android:background="@color/colorAlternate"
        android:text="@string/button_calculate"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="" />

    <TextView
        android:id="@+id/tv_letter_output"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:layout_marginVertical="16dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_weight="9"
        android:textSize="72sp"
        android:text="" />

</LinearLayout>